--- a/dev/src/scss/style.scss
+++ b/dev/src/scss/style.scss
@@ -595,6 +595,7 @@ div.sam-section-row {
 
 body {
   font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
   background-color: white;
   color: $color-text-main;
   -webkit-font-smoothing: antialiased;
